Displays clicked numbers. Correct behaviour if a number is too long.

--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,13 @@ body {
             "zer dott equals equals";
     }
 }
+#screen {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    font-size: 40px;
+    padding: 10px;
+}
 #switch {
     grid-area: switch;
 }
